2010-03-28  vadim  <vadim@vk.crocodile.org>

	* configlets/openbsd/installer_commands_reg_user: see #1368 A fix
	for the problem that causes built-in installer to hang after
	updating configuration of PF firewalls.

2010-03-27  vadim  <vadim@vk.crocodile.org>

	* fixed #1360 "negation of cluster interfaces is broken". Rule
	with one or several cluster interfaces in the "Interface" rule
	element with negation should compile into a rule using all other
	interfaces of the member firewall, or using single object negation
	"!" if appropriate. This is also fixed in compiler for PF.
	Files:
	src/iptlib/PolicyCompiler_ipt.cpp
	src/pflib/PolicyCompiler_pf.cpp
	See also changes r591 , r592 in libfwbuilder

	* platforms.cpp (isDefaultPolicyRuleOptions): fixed #1365 "missing
	some flags for the "non-default" rule options for PF"

	* FWObjectPropertiesFactory.cpp (FWObjectPropertiesFactory::getPolicyRuleOptions):
	fixed #1364 "add synproxy and other missing pf rule options to the
	rule options tooltip"

2010-03-26  vadim  <vadim@vk.crocodile.org>

	* RuleSetModel.cpp (RuleSetModel::getDecoration): fixed #1363
	"GUI crash in newClusterDialog". GUI crashed after a new cluster
	object has been created from two PF firewalls.

	* configlets/linux24/check_utilities: fixed #1359 "generated
	script hangs testing for iptables-restore"

2010-03-25  vadim  <vadim@vk.crocodile.org>

	* FWObjectPropertiesFactory.cpp (FWObjectPropertiesFactory::getObjectPropertiesBrief):
	fixed #1356 "Show number of rules in the rule set object in the
	second column of the tree"

	* PolicyCompiler_pf_writers.cpp (PrintRule::processNext): fixed #1351
	"synproxy rule option is broken"

2010-03-24  Roman Bovsunivkiy <a2k0001@gmail.com>

	* unit tests for IPv4Dialog, IPv6dialog, NetworkDialog, NetworkIPv6dialog
	fixed #1329, #1327

2010-03-23  Vadim Kurland  <vadim@vk.crocodile.org>

	* using CppUnit::TestFixture in unit tests based on cppunit:
	ImporterTest.h
	UsageResolverTest.h
	RCSTest.h
	FWBTreeTest.h